# ValidBlockGUI

./: buf.gen.yaml  buf.yaml  package.json  tailwind.config.js  test-buf.mjs  vite.config.ts
.github/workflows/: ci.yml
cypress/e2e/: anchor.cy.ts  verify.cy.ts
proto/: validblock.proto
src/: App.css  App.tsx
src-tauri/: Cargo.toml  anchors.db  tauri.conf.json
src-tauri/src/: lib.rs  lib.rsss  settings.rs  validblock.rs
src/components/: AnchorPane.tsx  SettingsPane.tsx  VerifyPane.tsx
src/lib/: client.ts  config.ts
validblock/: Cargo.toml
validblock/crates/core/: Cargo.toml  anchors.db  build.rss
validblock/crates/core/src/: lib.rs  main.rs  services.rs
validblock/crates/core/src/proto/: mod.rs  validblock.rs
validblock/crates/core/tests/: mock_wallet.rs
validblock/crates/hasher/: Cargo.toml
validblock/crates/hasher/src/: lib.rs
validblock/crates/storage/: Cargo.toml
validblock/crates/storage/src/: lib.rs
validblock/crates/types/: Cargo.toml
validblock/crates/types/src/: lib.rs
validblock/crates/wallet/: Cargo.toml
validblock/crates/wallet/src/: lib.rs  mock.rs
