[package]
name = "gui"
version = "0.3.0-alpha"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "gui"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "proxy"
path = "bin/proxy.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [ "config-json5" ] }

[dependencies]
tauri = { version = "2.0.0", features = [  "config-json5" ] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
uuid = { version = "1", features = ["v4"] }
tonic-web = "0.11.0"
tower = "0.4"

validblock-core = { path = "../validblock/crates/core" }
validblock-storage = { path = "../validblock/crates/storage" }
validblock-wallet = { path = "../validblock/crates/wallet" }
validblock-types = { path = "../validblock/crates/types" }
validblock-hasher = { path = "../validblock/crates/hasher" }
tower-http = { version = "0.6.6", features = ["cors"] }
